--- a/src/app/user-options/update-user-info/update-user-info.component.html
+++ b/src/app/user-options/update-user-info/update-user-info.component.html
@@ -40,7 +40,7 @@
     <br>
     <mat-dialog-actions>
       <!-- Close button -->
-      <button mat-button (click)="closeDialog()">
+      <button mat-button mat-dialog-close>
         <mat-icon svgIcon="cancel"></mat-icon>
         Cancel
       </button>
