--- a/src/app/user-options/user-info/user-info.component.html
+++ b/src/app/user-options/user-info/user-info.component.html
@@ -27,7 +27,7 @@
   <br>
   <mat-dialog-actions>
     <!-- Close button -->
-    <button mat-button (click)="closeDialog()" class="center">
+    <button mat-button mat-dialog-close class="center">
     <mat-icon svgIcon="close"></mat-icon>
       Close
     </button>
