--- a/src/app/user-options/view-assigned-parking/view-assigned-parking.component.html
+++ b/src/app/user-options/view-assigned-parking/view-assigned-parking.component.html
@@ -18,7 +18,7 @@
     <hr>
     <br>
     <!-- CLose button -->
-    <button mat-button (click)="closeDialog()" class="center">
+    <button mat-button mat-dialog-close class="center">
     <mat-icon svgIcon="close"></mat-icon>
       Close
     </button>
