created help dialog, updated docs

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -21,8 +21,13 @@
           <!-- Dragon code information -->
           <mat-tab-group class="center">
             <mat-tab label="Information">
-              <p>Dragon Code is a group of 3rd year students from Nelson Mandela University, that have formed
-                together, to slay evil bugs and develop the most efficent, secure software for the fate of man kind!
+              <p>
+                Dragon Code is a group of third year students from Mandela University, that have been given
+                the task to create an "Advanced", secure parking system for the university. In which they saw
+                greater opertunities, and decided to develope their project, so that it could be used by not
+                only the university, but any other minor, major facilities that wish to ensure that their
+                personnel have save parking areas, with little to no chance of theft of vehicles, and also
+                improve the way in which they monitor and control who has access to the facility, and when.
               </p>
             </mat-tab>
             <!-- Crew images, names -->
@@ -67,7 +72,7 @@
               <!-- Daniel Maree INFO -->
               <div class="align-text-picture">
                   <img src="assets/images/crew/daniel.png" alt="Daniel Maree">
-                  <p>Daniel Maree<br>(Copy Paster)</p>
+                  <p>Daniel Maree<br>(Copy Paster) <br>
                     <mat-icon svgIcon="github-circle"
                               onclick="window.open('https://github.com/DieWindpomp')"
                               matTooltip="Github"
@@ -93,11 +98,12 @@
                               matTooltip="Email"
                               matTooltipPosition="below">>
                     </mat-icon>
+                  </p>
               </div>
               <!-- Wihan Du Plessis INFO -->
               <div class="align-text-picture">
                   <img src="assets/images/crew/wihan.png" alt="Wihan Du Plessis">
-                  <p>Wihan Du Plessis<br>(Data Monkey)</p>
+                  <p>Wihan Du Plessis<br>(Data Monkey) <br>
                     <mat-icon svgIcon="github-circle"
                               onclick="window.open('https://github.com/EagleEye25/')"
                               matTooltip="Github"
@@ -109,11 +115,12 @@
                               matTooltip="Email"
                               matTooltipPosition="below">>
                     </mat-icon>
+                  </p>
               </div>
               <!-- Kobus Esterhuizen INFO -->
               <div class="align-text-picture">
                   <img src="assets/images/crew/kobus.png" alt="Kobus Esterhuizen">
-                  <p>Kobus Esterhuizen<br>(Code-Modo Dragon)</p>
+                  <p>Kobus Esterhuizen<br>(Code-Modo Dragon) <br>
                     <mat-icon svgIcon="github-circle"
                               onclick="window.open('https://github.com/Kabousi/')"
                               matTooltip="Github"
@@ -125,11 +132,12 @@
                               matTooltip="Email"
                               matTooltipPosition="below">>
                     </mat-icon>
+                  </p>
               </div>
               <!-- Maurice Garces De Gois INFO -->
               <div class="align-text-picture">
                   <img src="assets/images/crew/maurice.png" alt="Maurice Garcies De Gois">
-                  <p>Maurice Garces<br>De Gois<br>(Ctrl-SpaceFreak)</p>
+                  <p>Maurice Garces<br>De Gois<br>(Ctrl-SpaceFreak) <br>
                     <mat-icon svgIcon="github-circle"
                               onclick="window.open('https://github.com/Mauricegdg/')"
                               matTooltip="Github"
@@ -141,6 +149,7 @@
                               matTooltip="Email"
                               matTooltipPosition="below">>
                     </mat-icon>
+                  </p>
               </div>
             </mat-tab>
           </mat-tab-group>
