--- a/src/app/unipark-page/unipark-page.component.html
+++ b/src/app/unipark-page/unipark-page.component.html
@@ -26,7 +26,7 @@
             <span>Request Parking</span>
           </button>
           <!-- Help -->
-          <button mat-button>
+          <button mat-button (click)="openHelpDialog()">
             <mat-icon svgIcon="help"></mat-icon>
             <span>Help</span>
           </button>
