--- a/src/app/user-options/update-user-info/update-user-info.component.html
+++ b/src/app/user-options/update-user-info/update-user-info.component.html
@@ -45,7 +45,7 @@
         Cancel
       </button>
       <!-- Update button -->
-      <button mat-button (click)="updateInfo()">
+      <button mat-button (click)="verifyUpdateInfo()">
         <mat-icon svgIcon="cube-send"></mat-icon> 
         Update
       </button>
