--- a/src/app/user-options/user-info/user-info.component.html
+++ b/src/app/user-options/user-info/user-info.component.html
@@ -9,17 +9,21 @@
       <mat-list-item role="listitem">
         <strong>Name: &nbsp;</strong> {{ data.userName }}
       </mat-list-item>
+
       <mat-list-item role="listitem">
-        <strong>Surname: &nbsp;</strong> {{ data.userSur }}
+        <strong>Phone Number: &nbsp;</strong> {{ data.userPhone }}
       </mat-list-item>
+
       <mat-list-item role="listitem">
-        <strong>Password: &nbsp;</strong> {{ data.password }}
+        <strong>Email: &nbsp;</strong> {{ data.userEmail }}
       </mat-list-item>
+
       <mat-list-item role="listitem">
-        <strong>Personel Type: &nbsp;</strong> {{ data.personelType }}
+        <strong>Personel Type: &nbsp;</strong> {{ data.userType }}
       </mat-list-item>
+      
       <mat-list-item role="listitem">
-        <strong>Personel Level: &nbsp;</strong> {{ data.personelLevel }}
+        <strong>Personel Level: &nbsp;</strong> {{ data.userLevel }}
       </mat-list-item>
     </mat-list> 
   </mat-dialog-content>
