--- a/src/app/user-options/view-assigned-parking/view-assigned-parking.component.html
+++ b/src/app/user-options/view-assigned-parking/view-assigned-parking.component.html
@@ -9,7 +9,7 @@
         <strong>Parking Name: &nbsp;</strong> {{ data.parkingName }}
       </mat-list-item>
       <mat-list-item role="listitem">
-        <strong>Parking Access Level: &nbsp;</strong> {{ data.parkingAl }}
+        <strong>Parking Access Level: &nbsp;</strong> {{ data.parkingAL }}
       </mat-list-item>
       <mat-list-item role="listitem">
         <strong>Location: &nbsp;</strong> {{ data.parkingLocation }}
