--- a/src/app/user-options/infringements/infringements.component.html
+++ b/src/app/user-options/infringements/infringements.component.html
@@ -4,32 +4,37 @@
   <img src="assets/images/user-options/infringements/infringements.png" alt="Infringements.png">
   <hr>
   <mat-dialog-content>
+    <!-- Filter table input-->
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
     <!-- Mat table to display user infringements -->
-    <table mat-table [dataSource]="tableData" class="table">
+    <table mat-table [dataSource]="tableData" class="table" matSort>
       <!-- Date Column -->
       <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
         <td mat-cell *matCellDef="let report"> {{report.date}} </td>
       </ng-container>
       <!-- Description Column -->
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Description </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
         <td mat-cell *matCellDef="let report"> {{report.description}} </td>
       </ng-container>
       <!-- Type Column -->
       <ng-container matColumnDef="reportType">
-        <th mat-header-cell *matHeaderCellDef> Report Type </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Report Type </th>
         <td mat-cell *matCellDef="let report"> {{report.reportType}} </td>
       </ng-container>
       <!-- Status Column -->
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Status </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
         <td mat-cell *matCellDef="let report"> {{report.status}} </td>
       </ng-container>
     
      <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
     </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </mat-dialog-content>
   <hr>
   <br>
