--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,9 @@
 html { background-color: #424242; }
 
 body, html, .mat-sidenav-container {
-  height: 100vh;
+  height: 99%;
   color: white;
+  width: 99.5%
 }
 
 // Sets property to the end of the page
@@ -24,4 +25,27 @@ a.mat-menu-item > mat-icon {
 .mat-icon svg {
   height: 24px;
   width: 24px;
+}
+
+/* scroll bar styling */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  background: #00E676;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+background: #00E676;
 }
