--- a/src/app/user-options/infringements/infringements.component.html
+++ b/src/app/user-options/infringements/infringements.component.html
@@ -11,24 +11,24 @@
     <!-- Mat table to display user infringements -->
     <table mat-table [dataSource]="tableData" class="table" matSort>
       <!-- Date Column -->
-      <ng-container matColumnDef="date">
+      <ng-container matColumnDef="Date">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-        <td mat-cell *matCellDef="let report"> {{report.date}} </td>
+        <td mat-cell *matCellDef="let report"> {{report.Date}} </td>
       </ng-container>
       <!-- Description Column -->
-      <ng-container matColumnDef="description">
+      <ng-container matColumnDef="Description">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-        <td mat-cell *matCellDef="let report"> {{report.description}} </td>
+        <td mat-cell *matCellDef="let report"> {{report.Description}} </td>
       </ng-container>
       <!-- Type Column -->
-      <ng-container matColumnDef="reportType">
+      <ng-container matColumnDef="Report Type">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Report Type </th>
-        <td mat-cell *matCellDef="let report"> {{report.reportType}} </td>
+        <td mat-cell *matCellDef="let report"> {{report.ReportType}} </td>
       </ng-container>
       <!-- Status Column -->
-      <ng-container matColumnDef="status">
+      <ng-container matColumnDef="Status">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-        <td mat-cell *matCellDef="let report"> {{report.status}} </td>
+        <td mat-cell *matCellDef="let report"> {{report.Status}} </td>
       </ng-container>
     
      <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
