--- a/src/app/user-options/infringements/infringements.component.html
+++ b/src/app/user-options/infringements/infringements.component.html
@@ -9,6 +9,7 @@
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
     <!-- Mat table to display user infringements -->
+    <div>
     <table mat-table [dataSource]="tableData" class="table" matSort>
       <!-- Date Column -->
       <ng-container matColumnDef="Date">
@@ -34,6 +35,7 @@
      <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
     </table>
+  </div>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </mat-dialog-content>
   <hr>
