--- a/src/app/user-options/request-parking/request-parking.component.html
+++ b/src/app/user-options/request-parking/request-parking.component.html
@@ -7,24 +7,40 @@
     <mat-dialog-content [formGroup]="form">
     <!-- Mat form feild: parking area -->
       <mat-form-field>
-        <mat-select placeholder="Parking Area" formControlName="parkingArea" name="area">
-          <mat-option *ngFor="let area of areas" [value]="area.value">
-            {{area.viewValue}}
+        <mat-select placeholder="Parking Area" 
+                    formControlName="parkingArea"
+                    matInput
+                    [(value)]= "parkingArea"
+                    (selectionChange)='getAreaFromSelect($event.index)'>
+          <mat-option *ngFor="let ParkingArea of distinctArea"  [value]="distinctArea">
+            {{ParkingArea}}
           </mat-option>
         </mat-select>
       </mat-form-field>
+      <p>{{selectedArea}}</p>
       <br>
       <!-- Mat form feild: parking spot -->
       <mat-form-field>
-        <mat-select placeholder="Parking Spot" formControlName="parkingSpot" name="spot">
-          <mat-option *ngFor="let spot of spots" [value]="spot.value">
-            {{spot.viewValue}}
+        <mat-select placeholder="Parking Spot" 
+                    [disabled]="disableSelect.value" 
+                    formControlName="parkingSpot" 
+                    name="spot">
+          <mat-option *ngFor="let ParkingSpace of spots" [value]="spots">
+            {{ParkingSpace}}
           </mat-option>
         </mat-select>
       </mat-form-field>
     </mat-dialog-content>
     <br>
   </div>
+  <div id='map' style='width: 400px; height: 300px;'></div>
+    <script>
+      mapboxgl.accessToken = 'pk.eyJ1IjoiZWFnbGVleWUyNSIsImEiOiJjamp0NHcwbGcwaWVjM3BvMHdjOGx3dTZuIn0.wpJ4XdLSb2zBpJ8G36E7Fw';
+      const map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/streets-v9'
+      });
+    </script>
   <hr>
   <mat-dialog-actions>
     <!-- Close button -->
