--- a/src/app/user-options/update-user-info/update-user-info.component.html
+++ b/src/app/user-options/update-user-info/update-user-info.component.html
@@ -9,31 +9,46 @@
         <input matInput 
                 #input maxlength="10" 
                 placeholder="Cell-Phone Number"
-                formControlName="cellNo">
+                formControlName="cellNo"
+                [disabled]="disabledCell">
         <mat-hint align="end">{{ input.value?.length || 0 }}/10</mat-hint>
       </mat-form-field>
+      <mat-checkbox
+          [labelPosition]="checkBoxPos">
+      </mat-checkbox>
       <br>
       <!-- Mat form feild: email address -->
       <mat-form-field>
         <input matInput  
                 placeholder="E-mail Address"
-                [formControl]="email" required>
+                [formControl]="email" required
+                [disabled]="disabledEmail">
         <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error>
       </mat-form-field>
+      <mat-checkbox
+          [labelPosition]="checkBoxPos">
+      </mat-checkbox>
       <br>
       <!-- Mat form feild: password -->
       <mat-form-field>
-        <input matInput placeholder="New Password"
+        <input matInput 
+                placeholder="New Password"
                 [type]="hide ? 'password' : 'text'"
-                formControlName="newPass">
+                formControlName="newPass"
+                [disabled]="disabledPass">
       </mat-form-field>
+      <mat-checkbox
+          [(ngModel)]="disabledPass"
+          [labelPosition]="checkBoxPos">
+      </mat-checkbox>
       <br>
       <mat-form-field>
         <input matInput placeholder="Confirm Password"
                 [type]="hide ? 'password' : 'text'"
-                formControlName="confirmNewPass">
+                formControlName="confirmNewPass"
+                [disabled]="disabledPass">
         <mat-icon matSuffix
-          (click)="hide = !hide">{{ hide ? 'visibility' : 'visibility_off' }}</mat-icon>
+          (click)="hide = !hide">{{ hide ? 'visibility' : 'visibility_off' }} </mat-icon>
       </mat-form-field>
   </mat-dialog-content>
     <hr>
