--- a/src/app/user-options/update-user-info/update-user-info.component.html
+++ b/src/app/user-options/update-user-info/update-user-info.component.html
@@ -9,24 +9,22 @@
         <input matInput 
                 #input maxlength="10" 
                 placeholder="Cell-Phone Number"
-                formControlName="cellNo"
-                [disabled]="disabledCell">
+                formControlName="cellNo">
         <mat-hint align="end">{{ input.value?.length || 0 }}/10</mat-hint>
       </mat-form-field>
       <mat-checkbox
-          [labelPosition]="checkBoxPos">
+        [labelPosition]="checkBoxPos">
       </mat-checkbox>
       <br>
       <!-- Mat form feild: email address -->
       <mat-form-field>
         <input matInput  
                 placeholder="E-mail Address"
-                [formControl]="email" required
-                [disabled]="disabledEmail">
+                [formControl]="email" required>
         <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error>
       </mat-form-field>
       <mat-checkbox
-          [labelPosition]="checkBoxPos">
+        [labelPosition]="checkBoxPos">
       </mat-checkbox>
       <br>
       <!-- Mat form feild: password -->
@@ -34,19 +32,16 @@
         <input matInput 
                 placeholder="New Password"
                 [type]="hide ? 'password' : 'text'"
-                formControlName="newPass"
-                [disabled]="disabledPass">
+                formControlName="newPass">
       </mat-form-field>
       <mat-checkbox
-          [(ngModel)]="disabledPass"
-          [labelPosition]="checkBoxPos">
+        [labelPosition]="checkBoxPos">
       </mat-checkbox>
       <br>
       <mat-form-field>
         <input matInput placeholder="Confirm Password"
                 [type]="hide ? 'password' : 'text'"
-                formControlName="confirmNewPass"
-                [disabled]="disabledPass">
+                formControlName="confirmNewPass">
         <mat-icon matSuffix
           (click)="hide = !hide">{{ hide ? 'visibility' : 'visibility_off' }} </mat-icon>
       </mat-form-field>
