--- a/src/app/user-options/help/help.component.html
+++ b/src/app/user-options/help/help.component.html
@@ -50,9 +50,11 @@
   <br>
   <mat-dialog-actions>
     <!-- Close button -->
-    <button mat-button mat-dialog-close>
-      <mat-icon svgIcon="close"></mat-icon>
-      Close
-    </button>
+    <button mat-stroked-button
+      color="accent"
+      mat-dialog-close>
+        <mat-icon svgIcon="close"></mat-icon>
+          Close
+      </button>
   </mat-dialog-actions>
 </div>
