--- a/src/app/user-options/infringements/infringements.component.html
+++ b/src/app/user-options/infringements/infringements.component.html
@@ -42,9 +42,12 @@
   <br>
   <mat-dialog-actions>
     <!-- Close button -->
-    <button mat-button mat-dialog-close class="center">
-    <mat-icon svgIcon="close"></mat-icon>
-      Close
-    </button>
+    <button mat-stroked-button
+      color="accent"
+      mat-dialog-close
+      class="center">
+      <mat-icon svgIcon="close"></mat-icon>
+        Close
+      </button>
 </mat-dialog-actions>
 </div>
