--- a/src/app/user-options/request-parking/request-parking.component.html
+++ b/src/app/user-options/request-parking/request-parking.component.html
@@ -35,7 +35,7 @@
       <iframe 
         width="500" 
         height="400" 
-        src={{mapLink}}>
+        src={{mapLinkSafe}}>
       </iframe>
     </div>
     </div>
@@ -43,12 +43,15 @@
   <hr>
   <mat-dialog-actions>
     <!-- Close button -->
-    <button mat-button mat-dialog-close>
+    <button mat-button
+      color="warn"
+      mat-dialog-close>
       <mat-icon svgIcon="cancel"></mat-icon>
       Cancel
     </button>
     <!-- Update button -->
-    <button mat-button
+    <button mat-stroked-button
+      color="accent"
       [disabled]="(areaSelected === false && spotSelected === false)"
       (click)="submitRequestParking()">
       <mat-icon svgIcon="cube-send"></mat-icon> 
