--- a/src/app/user-options/user-info/user-info.component.html
+++ b/src/app/user-options/user-info/user-info.component.html
@@ -31,9 +31,12 @@
   <br>
   <mat-dialog-actions>
     <!-- Close button -->
-    <button mat-button mat-dialog-close class="center">
-    <mat-icon svgIcon="close"></mat-icon>
-      Close
+    <button mat-stroked-button
+      color="accent"
+      mat-dialog-close
+      class="center">
+      <mat-icon svgIcon="close"></mat-icon>
+        Close
     </button>
 </mat-dialog-actions>
 </div>
