--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--DOCTYPE html>
 <html>
 <head>
     <meta charset='utf-8' />
@@ -25,4 +25,6 @@ var map = new mapboxgl.Map({
 </script>
 
 </body>
-</html>
+</html-->
+
+<div id="map"></div>
