--- a/src/app/user-options/infringements/infringements.component.html
+++ b/src/app/user-options/infringements/infringements.component.html
@@ -1,4 +1,4 @@
-<div class="alternative">
+<div class="alternative center">
   <!-- Display of login modal -->
   <!-- Displays user info image -->
   <img src="assets/images/user-options/infringements/infringements.png" alt="Infringements.png">
@@ -40,14 +40,4 @@
   </mat-dialog-content>
   <hr>
   <br>
-  <mat-dialog-actions>
-    <!-- Close button -->
-    <button mat-stroked-button
-      color="accent"
-      mat-dialog-close
-      class="center">
-      <mat-icon svgIcon="close"></mat-icon>
-        Close
-      </button>
-</mat-dialog-actions>
 </div>
