--- a/src/app/user-options/request-parking/request-parking.component.scss
+++ b/src/app/user-options/request-parking/request-parking.component.scss
@@ -5,3 +5,27 @@
   margin-right: auto;
   width: 50%;
 }
+
+.padding-image {
+  padding-left: 31%;
+}
+
+.padding-feilds {
+  padding-left: 39%;
+}
+
+.padding-buttons {
+  padding-left: 38%;
+}
+
+.center2{
+  margin: auto;
+  left: 0; 
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.padding-map {
+  padding-left: 14%;
+}
