--- a/src/app/user-options/view-assigned-parking/view-assigned-parking.component.html
+++ b/src/app/user-options/view-assigned-parking/view-assigned-parking.component.html
@@ -1,27 +1,25 @@
 <div class="alternative center">
-    <!-- Display of login modal -->
-    <!-- Displays assigned parking image -->
-    <img src="assets/images/user-options/assigned-parking/assigned-parking.png" alt="User Info">
-    <hr>
-    <!-- Mat list to display assigned parking -->
+  <!-- Display of login modal -->
+  <!-- Displays assigned parking image -->
+  <img class="padding-image" src="assets/images/user-options/assigned-parking/assigned-parking.png" alt="User Info">
+  <hr>
+  <!-- Mat list to display assigned parking -->
+  <div class="padding-feilds">
     <mat-list role="list">
       <mat-list-item role="listitem">
-        <strong>Parking Name: &nbsp;</strong> {{ data.ParkingName }}
+        <strong>Parking Name: &nbsp;</strong> {{ ParkingName }}
       </mat-list-item>
       <mat-list-item role="listitem">
-        <strong>Parking Access Level: &nbsp;</strong> {{ data.ParkingAccessLevel }}
+        <strong>Parking Access Level: &nbsp;</strong> {{ ParkingAccessLevel }}
       </mat-list-item>
       <mat-list-item role="listitem">
-        <strong>Location: &nbsp;</strong> {{ data.Location }}
+        <strong>Location: &nbsp;</strong> {{ Location }}
       </mat-list-item>
     </mat-list>
-    <div>
-      <!--iframe 
-        width="500" 
-        height="400" 
-        src="">
-      </iframe-->
-      <app-map longitude="25.671278" latitude="-34.001097"></app-map>
-    </div>
+  </div>
+  <div class="padding-map">
+    <app-map longitude="25.672261" latitude="-33.999720"></app-map>
+  </div>
+  <hr>
 </div>
   
