--- a/src/app/user-options/user-info/user-info.component.html
+++ b/src/app/user-options/user-info/user-info.component.html
@@ -19,11 +19,11 @@
       </mat-list-item>
 
       <mat-list-item role="listitem">
-        <strong>Personel Type: &nbsp;</strong> {{ Type }}
+        <strong>Personnel Type: &nbsp;</strong> {{ Type }}
       </mat-list-item>
       
       <mat-list-item role="listitem">
-        <strong>Personel Level: &nbsp;</strong> {{ PersonelLevel }}
+        <strong>Personnel Level: &nbsp;</strong> {{ PersonelLevel }}
       </mat-list-item>
     </mat-list> 
   </mat-dialog-content>
