--- a/src/app/user-options/update-user-info/update-user-info.component.html
+++ b/src/app/user-options/update-user-info/update-user-info.component.html
@@ -14,6 +14,7 @@
           <mat-hint align="end">{{ input.value?.length || 0 }}/10</mat-hint>
         </mat-form-field>
         <mat-checkbox
+          [checked]="reset"
           (change)="changeCell()"
           [labelPosition]="checkBoxPos">
         </mat-checkbox>
@@ -26,6 +27,7 @@
           <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error>
         </mat-form-field>
         <mat-checkbox
+          [checked]="reset"
           (change)="changeEmail()"
           [labelPosition]="checkBoxPos">
         </mat-checkbox>
@@ -38,6 +40,7 @@
                   formControlName="newPass">
         </mat-form-field>
         <mat-checkbox
+          [checked]="reset"
           (change)="changePassword()"
           [labelPosition]="checkBoxPos">
         </mat-checkbox>
