email no longer required

--- a/src/app/user-options/update-user-info/update-user-info.component.html
+++ b/src/app/user-options/update-user-info/update-user-info.component.html
@@ -23,7 +23,7 @@
         <mat-form-field>
           <input  matInput
                   placeholder="E-mail Address"
-                  [formControl]="email" required>
+                  [formControl]="email">
           <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error>
         </mat-form-field>
         <mat-checkbox
