validation of fields on startup

--- a/src/app/user-options/update-user-info/update-user-info.component.html
+++ b/src/app/user-options/update-user-info/update-user-info.component.html
@@ -68,7 +68,7 @@
       </button>
       <!-- Update button -->
       <button
-        [disabled]="email.invalid || cellNo.invalid" 
+        [disabled]="email.invalid || cellNo.invalid || clean" 
         mat-stroked-button
         color="accent"
         (click)="verifyUpdateInfo()">
