validation for password change

--- a/src/app/user-options/update-user-info/update-user-info.component.html
+++ b/src/app/user-options/update-user-info/update-user-info.component.html
@@ -43,6 +43,7 @@
                   placeholder="New Password"
                   [type]="hide ? 'password' : 'text'"
                   formControlName="newPass">
+                  <mat-error *ngIf="newPass.invalid">Please enter all 10 digits!</mat-error>
         </mat-form-field>
         <mat-checkbox
           [checked]="resetPass"
